WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274699
[WebGPU] drawIndexed validation fails when the buffer stride exceeds buffer's lastStride
https://bugs.webkit.org/show_bug.cgi?id=274699
Summary
[WebGPU] drawIndexed validation fails when the buffer stride exceeds buffer's...
Mike Wyrzykowski
Reported
2024-05-24 19:31:37 PDT
[WebGPU] drawIndexed validation fails when the buffer stride exceeds buffer's lastStride
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-05-24 19:31:52 PDT
radar://128601247
Mike Wyrzykowski
Comment 2
2024-05-24 19:48:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29105
EWS
Comment 3
2024-05-27 23:51:30 PDT
Committed
279367@main
(89dad57f2bc3): <
https://commits.webkit.org/279367@main
> Reviewed commits have been landed. Closing PR #29105 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug